--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -450,12 +450,13 @@ p{
         }
     }
     .titu6{
-        height: 10vh;
+        height: 15vh;
     }
     .cuarto{
-        height: 250vh;
+        height: 240vh;
         flex-direction: column;
         align-items: center;
+        justify-content: start;
         .izq2, .centro, .der2{
             width: 90%;
             height: 70vh;
